# advent-of-code-ocr

./: .deepsource.toml  .editorconfig  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.md  LICENSE  README.md  justfile  pyproject.toml  requirements.txt  setup.py  tox.ini
.github/: CODEOWNERS  dependabot.yml  labels.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.yml
.github/workflows/: publish.yml  pypi.yml  pytest.yml  repo-config.yml  test.yml
advent_of_code_ocr/: __init__.py  __main__.py  __version__.py  aoc_ocr.py  characters.py  cli.py  exceptions.py  height_6.py  main.py
docs/: __init__.py  cli.rst  conf.py  height_6.rst  index.rst
src/advent_of_code_ocr/: __init__.py  __main__.py  characters.py  cli.py  exceptions.py  height_6.py
tests/: __init__.py  cli_test.py  convert_6_test.py  init_test.py  test_6.py  test_cli.py
